# DerivDen

./: .example.env  .gitignore  README.md  adapters.py  dashboard_ui_cell.py  main.py  pricing_engine.py  pyproject.toml
playground/: 0_ExploringSynthApi.py  1_ExploringDeriveApi.py  3_cls_DerivDen.py  4_refactor_DerivDen.py
